feat (courses): Fetching teacher courses

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,62 @@
-node_modules
-.next
+node_modules/
+.next/
 .env.local
 .env
+*.log
+debug*.js
+tmp_*
+*.tmp
+.DS_Store
+Thumbs.db
+*.swp
+*.swo
+*~
+.vscode/
+.idea/
+*.iml
+dist/
+build/
+coverage/
+.nyc_output/
+.cache/
+*.tgz
+*.tar.gz
+package-lock.json
+yarn.lock
+.npm/
+.yarn/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Documentation and fix files that shouldn't be in production
+*_FIX.md
+*_GUIDE.md
+*_CLEANUP*.md
+*_WARNING*.md
+*_TRACE*.md
+*_TROUBLESHOOT*.md
+BUILD_*.md
+CONSOLE_*.md
+COURSES_*.md
+FILTER_*.md
+FILTERED_*.md
+GET_*.md
+IMPORT_*.md
+JWT_*.md
+MODULE_*.md
+NEXTJS_*.md
+NOTIFICATIONS_*.md
+QUICK_*.md
+cReq.md
+e.md
+e2.md
+m.md
+Req.md
+rr.md
+remove_debug_logs.js
+correct_exam_questions.json
+iqama-center@1.0.0
+next
+npm
+11.5.2
