--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "dotenv": "^17.2.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
-    "next": "^15.4.1",
+    "next": "^15.5.6",
     "next-connect": "^1.0.0",
     "node-cron": "^3.0.3",
     "pg": "^8.11.3",
@@ -35,7 +35,8 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.62.0",
     "zod": "^3.25.76",
-    "zustand": "^4.5.7"
+    "zustand": "^4.5.7",
+    "next-auth": "^5.0.0-beta.19"
   },
   "devDependencies": {
     "eslint": "^9.30.1",
